--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -27,3 +27,18 @@ linter:
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
+dart_code_metrics:
+  anti-patterns:
+    - long-method
+    - long-parameter-list
+  metrics:
+    cyclomatic-complexity: 20
+    maximum-nesting-level: 5
+    number-of-parameters: 4
+    source-lines-of-code: 50
+  metrics-exclude:
+    - test/**
+  rules:
+    - no-boolean-literal-compare
+    - prefer-trailing-comma
+    - no-equal-then-else
