--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,12 @@ dependencies:
   responsive_grid: ^2.0.0
   youtube_player_flutter: ^8.0.0
   flutter_login: ^3.1.0
+  jwt_decode: ^0.3.1
+  flutter_secure_storage: ^5.0.2
+  provider: ^6.0.2
+  chips_choice_null_safety: ^2.0.4
+  radis_rounded_button: ^0.0.2
+  form_validator: ^1.0.2
 
 dev_dependencies:
   flutter_test:
