--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,12 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
   dart_code_metrics: ^4.10.1
+  flutter_native_splash: ^2.0.5
+
+flutter_native_splash:
+  color: "#ffffff"
+  image: assets/BuletinLogoBiggerCircle.png
+  android: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
