--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   chips_choice_null_safety: ^2.0.4
   radis_rounded_button: ^0.0.2
   form_validator: ^1.0.2
+  timeago: ^3.2.2
+  share_plus: ^3.1.0
 
 dev_dependencies:
   flutter_test:
