--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   timeago: ^3.2.2
   share_plus: ^3.1.0
   jwt_decoder: ^2.0.1
+  google_fonts: ^2.3.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
