--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   google_fonts: ^2.3.1
   intl: ^0.17.0
   device_info_plus: ^3.2.2
+  flutter_svg: ^1.0.3
 
 dev_dependencies:
   flutter_test:
@@ -75,7 +76,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/svg/flame.svg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
