--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   jwt_decoder: ^2.0.1
   google_fonts: ^2.3.1
   intl: ^0.17.0
+  chewie: ^1.3.1
   device_info_plus: ^3.2.2
   flutter_svg: ^1.0.3
 
