--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,7 +68,7 @@ dev_dependencies:
 
 flutter_native_splash:
   color: "#ffffff"
-  image: assets/BuletinLogoBiggerCircle.png
+  image: assets/BuletinLogo.png
   android: true
 
 # For information on the generic Dart part of this file, see the
