--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,11 +65,16 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   dart_code_metrics: ^4.10.1
   flutter_native_splash: ^2.0.5
+  flutter_launcher_icons: ^0.9.2
 
 flutter_native_splash:
   color: "#ffffff"
   image: assets/BuletinLogo.png
   android: true
+
+flutter_icons:
+  android: true
+  image_path: assets/BuletinLogo.png
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
